# fcitx5-lotus-flower

./: .all-contributorsrc  .gitignore  CMakeLists.txt  PKGBUILD  README.en.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  nix.yml  packaging-dev.yml  packaging-release.yml
bamboo/: bamboo-c.go  fcitxbambooengine
misc/: CMakeLists.txt  fcitx5-lotus.runit
nix/modules/nixos/fcitx5-lotus/: default.nix
packaging/debian/: changelog  rules
packaging/rpm/fedora/: fcitx5-lotus.spec
packaging/rpm/opensuse/: fcitx5-lotus.spec
po/: fcitx5-lotus.pot  vi.po
server/: lotus-logger.h  lotus-server.cpp  lotus-server.h
settings-gui/ui/: components.py  helpers.py  main_window.py
settings-gui/ui/pages/: about.py  backup.py  dict_editor.py  dynamic_settings.py  keymap_editor.py  macro_editor.py  mode_manager.py
src/: lotus-candidates.cpp  lotus-config.h  lotus-engine.cpp  lotus-engine.h  lotus-monitor.cpp  lotus-monitor.h  lotus-state.cpp  lotus-state.h  lotus-utils.cpp  lotus-utils.h
